<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="{{PACKAGE}}.ui.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideNavTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/margin_nav_top" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideTitleTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/margin_title" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideNavStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideNavEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="32dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="32dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="32dp" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text='@{vm.title, default="Title"}'
            android:textColor="@color/colorBlack"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="@+id/guideEnd"
            app:layout_constraintStart_toStartOf="@+id/guideStart"
            app:layout_constraintTop_toTopOf="@+id/guideTitleTop" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/tilPassword"
            app:layout_constraintEnd_toEndOf="@+id/guideEnd"
            app:layout_constraintStart_toStartOf="@+id/guideStart">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                style="@style/AppTheme.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions|textEmailAddress"
                android:text="@={vm.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnForgotPassword"
            app:layout_constraintEnd_toEndOf="@+id/guideEnd"
            app:layout_constraintStart_toStartOf="@+id/guideStart"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                style="@style/AppTheme.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={vm.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/blue_ripple_bounded"
            android:onClick="@{() -> vm.forgotPasswordClick()}"
            android:paddingStart="13dp"
            android:paddingTop="8dp"
            android:paddingEnd="13dp"
            android:paddingBottom="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorBlue"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/btnLogin"
            style="@style/AppTheme.Button.Big"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> vm.loginClick()}"
            android:text="@string/continu"
            app:layout_constraintBottom_toTopOf="@+id/btnGoogle"
            app:layout_constraintEnd_toEndOf="@+id/guideEnd"
            app:layout_constraintStart_toStartOf="@+id/guideStart" />

        <TextView
            android:id="@+id/btnGoogle"
            style="@style/AppTheme.Button.Medium.Google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="@{() -> vm.continueWithGoogleClick()}"
            android:text="@string/continue_with_google"
            app:layout_constraintBottom_toTopOf="@+id/btnFacebook"
            app:layout_constraintEnd_toEndOf="@+id/guideEnd"
            app:layout_constraintStart_toStartOf="@+id/guideStart" />

        <TextView
            android:id="@+id/btnFacebook"
            style="@style/AppTheme.Button.Medium.Facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.continueWithFacebookClick()}"
            android:text="@string/continue_with_facebook"
            app:layout_constraintBottom_toBottomOf="@+id/guideBottom"
            app:layout_constraintEnd_toEndOf="@+id/guideEnd"
            app:layout_constraintStart_toStartOf="@+id/guideStart" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>